Specifies GC arguments for bootRun tasks